--- a/TestAPIv4/Base.lproj/Main.storyboard
+++ b/TestAPIv4/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8f3-1d-sP2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
@@ -7,7 +7,7 @@
         <!--Start Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="StartController" sceneMemberID="viewController">
+                <viewController wantsFullScreenLayout="YES" id="9pv-A4-QxB" customClass="StartController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -89,6 +89,9 @@
                                 <state key="normal" title="find">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="XML-fi-4PD" kind="push" id="A92-ct-1TO"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OrU-An-xvL">
                                 <rect key="frame" x="20" y="354" width="280" height="48"/>
@@ -134,10 +137,10 @@
             </objects>
             <point key="canvasLocation" x="906" y="-679"/>
         </scene>
-        <!--View Controller-->
+        <!--Routes Controller-->
         <scene sceneID="GqE-zy-BIQ">
             <objects>
-                <viewController id="XML-fi-4PD" sceneMemberID="viewController">
+                <viewController id="XML-fi-4PD" customClass="RoutesController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3Np-kg-suz"/>
                         <viewControllerLayoutGuide type="bottom" id="wz0-vf-JSQ"/>
@@ -147,10 +150,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="sFB-vn-BKH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ndA-es-6aY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1484" y="-679"/>
+            <point key="canvasLocation" x="1388" y="-679"/>
         </scene>
         <!--Pre Start Controller-->
         <scene sceneID="BkD-6p-S1d">
@@ -181,12 +185,12 @@
                     <navigationItem key="navigationItem" id="3kp-VJ-nPY"/>
                     <connections>
                         <outlet property="imageViewLogo" destination="mh8-hz-HfT" id="Y29-GC-z5X"/>
-                        <segue destination="9pv-A4-QxB" kind="custom" identifier="splash" customClass="SplashSegue" id="bGg-SM-CQ2"/>
+                        <segue destination="49e-Tb-3d3" kind="custom" identifier="splash" customClass="SplashSegue" id="Q7d-is-6Tj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="syu-xy-hXT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="440" y="-1378"/>
+            <point key="canvasLocation" x="-452" y="0.0"/>
         </scene>
         <!--Choise Station Controller-->
         <scene sceneID="ihR-pE-mYb">
@@ -205,7 +209,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H4W-R4-k6m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="972" y="-1378"/>
+            <point key="canvasLocation" x="440" y="-1378"/>
         </scene>
         <!--Date Departure Controller-->
         <scene sceneID="mPp-nc-NK4">
@@ -224,7 +228,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3rO-nA-mFb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1484" y="-1378"/>
+            <point key="canvasLocation" x="906" y="-1378"/>
         </scene>
         <!--My Tickets-->
         <scene sceneID="wg7-f3-ORb">
@@ -318,7 +322,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="8f3-1d-sP2" kind="relationship" relationship="rootViewController" id="lLf-da-MLb"/>
+                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="IEu-JE-A0w"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vsj-RB-qJY" userLabel="First Responder" sceneMemberID="firstResponder"/>
